--- a/src/views/OlxDetails/style.css
+++ b/src/views/OlxDetails/style.css
@@ -1,28 +1,142 @@
+.details-body{
+    margin: 30px;
+}
 .details{
     display: flex;
+    /* margin: 25px; */
+    flex-wrap: wrap;
 }
 .imageGallery{
-    background-color: red;
-    width: 65%;
+    /* background-color: red; */
+    /* min-width: 65%; */
     height: 600px;
+    flex:2;
+    margin-right:15px;
 }
 .contactInfo{
-    background-color: yellow;
-        width: 35%;
+    /* background-color: yellow; */
+    /* min-width: 35%; */
+    flex:1;
     height: 600px;
+    }
+
+.contactInfo-details{
+    /* background-color: orangered; */
+    width: 100%;
+    height: 210px;
+    overflow: hidden;
+    border: #c0bebe 1px solid;
+    border-radius: 5px;
+    padding: 15px;
+
+}
+/*  */
+.contant-title{
+    
+    display: flex;
+    color:#4F4F4F;
+    align-items: center;
+}
+
+/*  */
+.contant-text {
+    margin-left: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+.contant-text  p{
+    font-weight: bold;
+}
+.contant-text h1,
+.contant-text p,
+.contant-text h5 {
+    margin-bottom: 5px; /* Adjust the value to control the vertical gap */
+}
+
+
+.contant-title img{
+    border-radius: 70%;
+}
+
+.contant-title h1{
+    font-size: 16px;
+    font-weight: bold;
+}
+
+.contant-title p{
+    font-size: 12px;
+}
+
+/*  */
+
+.profile-avatar {
+    width: 70px;
+    height: 70px;
+    border-radius: 50%;
+    overflow: hidden;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+}
+
+.profile-avatar img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+/* buttons chat see number */
+
+.contant-chat button{
+    width: 100%;
+    background-color: #002F34;
+    color: aliceblue;
+    font-weight: bold;
+    border: none;
+    border-radius: 5px;
+    padding: 10px;
+    margin: 5px;
+    margin-top: 10px 5px;
+    cursor: pointer;
+
+}
+
+.contactInfo-location{
+    width: 100%;
+    height: 100px;
+    overflow: hidden;
+    border: #c0bebe 1px solid;
+    border-radius: 5px;
+    padding: 15px;
+    margin-top: 35px;
+}
+
+.contactInfo-location h3,
+.contactInfo-location p{
+    color: #002F34;
+
+}
+
+.details-2{
+    width: 65%;
+    height: 150px;
+    overflow: hidden;
+    border: #c0bebe 1px solid;
+    border-radius: 5px;
+    padding: 15px;
+    margin-bottom: 15px;
 }
 .details-2{
-    background-color: pink;
-        width: 65%;
-    height: 200px;
+    color: #002F34;
 }
+
 .details-3{
-    background-color: rebeccapurple;
-        width: 65%;
-    height: 200px;
+
+    width: 65%;
+    height: 100px;
+    overflow: hidden;
+    border: #c0bebe 1px solid;
+    border-radius: 5px;
+    padding: 15px;
+    margin-bottom: 15px;
 }
-.details-4{
-    background-color:green;
-        width: 65%;
-    height: 200px;
-}
+
