--- a/src/views/sellPage/style.css
+++ b/src/views/sellPage/style.css
@@ -111,7 +111,30 @@ input[type=file] {
   font-size: 18px;
 }
 
+.findLocation{
+  border: none;
+      border-radius: 5px;
+  outline: 0;
+  display: inline-block;
+  padding: 8px;
+  color: white;
+  text-align: center;
+  background-color: #002F34;
+  font-size: 18px;
+  cursor: pointer;
+}
+
 .edtBtn:hover {
   opacity: 0.7;
 }
-/*  */
+/*range css start  */
+.loader{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 100px;
+  /* display: flex; */
+  /* justify-content: center; */
+  /* align-items: center; */
+}
+/*range css end  */
